  Need to restore jmock test cases: 
  net.sourceforge.cruisecontrol.dashboard.repository.BuildInformationRepositoryInMemoImplTest.xxxtestShouldReturnJMXConnection()
  net.sourceforge.cruisecontrol.dashboard.service.BuildLoopQueryServiceTest.xxxtestShouldReturnBuildOutput()

reporting jsp app
======================
* navigation.jsp missing <li> tags around some elements under <ul> tag (CC-950). Reported by Chris Sewart

documentation
======================

configxml.html
----------------------
* PropertyFileLabelIncrementer: document preBuildIncrementer attribute (CC-900). Patch by David Corley
* Fix doc error attribute "localworkingdir" for <Mercurial> build trigger when it should be "localworkingcopy" (CC-893). Reported by Joona Petrell


CruiseControl Release Notes - 2.8.2

BuildLoopStatusReportTask
----------------------
* Fix bug where a project with no ModificationSet would cause the error message 'Failed to reach dashboard instance : http://localhost:8080/dashboard/buildloop/listener, either the dashboard has not started up or there is a network problem' (CC-766).

cruisecontrol.sh (Binary Release)
----------------------
* Allow JETTY_LOGS to be set by environment varable (CC-872). Patch by Angie Lin

CruiseControlConfig
----------------------
* Restore the ability to have custom PropertiesPlugins.

distributed
----------------------
* Fix bug where DistributedMasterBuilder was not delegating isTimeBuilder() to the nestedBuilder, which meant that forcing a build with only a single time based distributed build would fail. Reported by Spencer Smith

ExecBuilder
----------------------
* Log exceptions coming back from the ScriptRunner.

Maven2Builder
----------------------
* Add new attribute "siteGoal" that are run after the normal "goal", such as publishing a site even if a test fails (CC-877). Submitted by Jene Jasper

Mercurial
----------------------
* Fix bug when author name contains special XML characters (CC-879). Patch by Daniel Kullman
