@@ -44,6 +44,10 @@
                 <revision>1.2</revision>
                 <filename>build.xml</filename>
             </file>
+            <file action="deleted">
+                <revision>1.2</revision>
+                <filename>blah.txt</filename>
+            </file>
             <date>12/21/2006 10:57:34</date>
             <user>readcb</user>
             <comment><![CDATA[story123 project name changed to cache]]></comment>
