@@ -77,6 +77,7 @@
 .modifications .user {
     background-image: url( "../images/user.gif" );
     background-repeat: no-repeat;
+    background-position: 0 1em;
     padding-left:15px;
     font-weight: bold;
 }
