@@ -256,4 +256,34 @@
     <welcome-file-list>
     	<welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+
+
+
+    <!-- start: added by Dan -->
+    <security-constraint>
+        <!-- display-name>Example Security Constraint</display-name -->
+        <web-resource-collection>
+            <web-resource-name>Protected Area</web-resource-name>
+            <!-- Define the context-relative URL(s) to be protected -->
+            <url-pattern>/buildresults/*</url-pattern>
+            <!-- If you list http methods, only those methods are protected -->
+            <http-method>DELETE</http-method>
+            <http-method>GET</http-method>
+            <http-method>POST</http-method>
+            <http-method>PUT</http-method>
+        </web-resource-collection>
+        <auth-constraint>
+            <!-- Anyone with one of the listed roles may access this area -->
+            <role-name>ccadmin</role-name>
+            <!-- role-name>role1</role-name -->
+        </auth-constraint>
+    </security-constraint>
+
+    <login-config>
+        <auth-method>BASIC</auth-method>
+        <realm-name>CruiseControl</realm-name>
+    </login-config>
+    <!-- end: added by Dan -->
+
+    
 </web-app>
